<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:clickable="false"
    android:background="@drawable/bg_main_bottom"
    style="@style/AppTheme">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_bg_left"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_bg_right"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:clickable="false"
        android:background="@drawable/bg_main_top">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:id="@+id/start"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        style="@style/NavigationButton"
        android:contentDescription="@string/start"
        android:src="@drawable/ic_start" />

    <ImageButton
        android:id="@+id/restart"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/start"
        style="@style/NavigationButton"
        android:src="@drawable/ic_restart"
        android:focusable="true" />


    <RadioGroup
        android:id="@+id/difficultyLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:button="@android:color/transparent"
            android:text="@string/easy"
            android:gravity="center_horizontal|top"
            style="@style/AppTheme"
            android:layout_marginRight="@dimen/level_option_margin"
            android:background="@drawable/difficulty_easy"
            android:drawablePadding="0dp" />

        <RadioButton
            android:id="@+id/normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/difficulty_normal"
            android:button="@android:color/transparent"
            android:text="@string/normal"
            android:gravity="center_horizontal|top"
            style="@style/AppTheme"
            android:layout_marginRight="@dimen/level_option_margin"
            android:checked="false" />

        <RadioButton
            android:id="@+id/hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/difficulty_hard"
            android:text="@string/hard"
            android:gravity="center_horizontal|top"
            android:button="@android:color/transparent"
            style="@style/AppTheme"
            android:checked="false" />
    </RadioGroup>

    <ImageButton
        android:id="@+id/reading"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        style="@style/NavigationButton"
        android:background="@drawable/toggle_button"
        android:src="@drawable/ic_audio_reading"/>

    <ImageButton
        android:id="@+id/music"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/reading"
        style="@style/NavigationButton"
        android:background="@drawable/toggle_button"
        android:src="@drawable/ic_music"
        />

    <ImageButton
        android:id="@+id/showLevels"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/start"
        style="@style/NavigationButton"
        android:contentDescription="@string/title_activity_select_level"
        android:src="@drawable/ic_map" />

    </RelativeLayout>

</RelativeLayout>
